--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pm</groupId>
-    <artifactId>grpcClient</artifactId>
+    <artifactId>grpc-client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
